added grid input
added grid input where user can make table with desired number of rows and columns and set routing as well

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,6 +23,12 @@
           Cart
         </a>
       </div>
+      <div class="nav-item">
+        <a href="/grid-input">
+          <i class="fas fa-grip-horizontal"></i>
+          GridInput
+        </a>
+      </div>
       <div class="nav-item" *ngIf="isAuthenticated">
         <a href="/login">
           <i class="fas fa-sign-in-alt"></i>
