--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,8 +5,13 @@
   </div>
   <div class="navbar-middle">
     <div class="search-bar">
-      <input type="text" placeholder="Search" class="search-input" />
-      <button class="search-button">Search</button>
+      <input
+        type="text"
+        placeholder="Search"
+        class="search-input"
+        [(ngModel)]="searchQuery"
+      />
+      <button class="search-button" (click)="searchProducts()">Search</button>
     </div>
   </div>
   <div class="navbar-right">
